[package]
name = "summarize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nalgebra = "0.31.1"
regex = "1.5.5"
symm = { git = "https://github.com/ntBre/symm" }
spectro = { git = "https://github.com/ntBre/spectro" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
"summarize-bin",
]
