[package]
name = "summarize-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
summarize = { path = ".." }
symm = { path = "/home/brent/Projects/symm" }
