[package]
name = "summarize-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
summarize = { path = ".." }
symm = { path = "/home/brent/Projects/symm" }
regex = "1.5.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
spectro = { path = "/home/brent/Projects/spectro/spectro" }
tui = "0.19"
crossterm = "0.25"