[package]
name = "summarize-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
summarize = { path = ".." }
symm = { git = "https://github.com/ntBre/symm" }
regex = "1.10.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
spectro = { git = "https://github.com/ntBre/spectro" }
tui = "0.19"
crossterm = "0.27"
